// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzTabs > Snapshots > should match snapshot - default state 1`] = `
"<div data-v-97c498eb="" class="flex flex-col">
  <div data-v-97c498eb="" class="flex flex-row">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto w-full sm:w-auto flex-row"><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 bg-white text-blue-500 cursor-pointer max-w-[136px]" title="tab1">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab1</span>
        <!--v-if-->
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer max-w-[136px]" title="tab2">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>Content tab1
  <!--v-if-->
</div>"
`;

exports[`FzTabs > Snapshots > should match snapshot - disabled tab 1`] = `
"<div data-v-97c498eb="" class="flex flex-col">
  <div data-v-97c498eb="" class="flex flex-row">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto w-full sm:w-auto flex-row"><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 bg-white text-blue-500 cursor-not-allowed max-w-[136px]" title="tab1" disabled="">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab1</span>
        <!--v-if-->
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer max-w-[136px]" title="tab2">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>Content tab1
  <!--v-if-->
</div>"
`;

exports[`FzTabs > Snapshots > should match snapshot - md size 1`] = `
"<div data-v-97c498eb="" class="flex flex-col">
  <div data-v-97c498eb="" class="flex flex-row">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto w-full sm:w-auto flex-row"><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-md h-40 gap-8 py-12 px-14 bg-white text-blue-500 cursor-pointer max-w-[136px]" title="tab1">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab1</span>
        <!--v-if-->
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-md h-40 gap-8 py-12 px-14 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer max-w-[136px]" title="tab2">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>Content tab1
  <!--v-if-->
</div>"
`;

exports[`FzTabs > Snapshots > should match snapshot - tab change 1`] = `
"<div data-v-97c498eb="" class="flex flex-col">
  <div data-v-97c498eb="" class="flex flex-row">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto w-full sm:w-auto flex-row"><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer max-w-[136px]" title="tab1">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab1</span>
        <!--v-if-->
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 bg-white text-blue-500 cursor-pointer max-w-[136px]" title="tab2">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->Content tab2
</div>"
`;

exports[`FzTabs > Snapshots > should match snapshot - vertical direction 1`] = `
"<div data-v-97c498eb="" class="flex flex-row">
  <div data-v-97c498eb="" class="flex flex-col">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto w-full sm:w-auto flex-col"><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 bg-white text-blue-500 cursor-pointer max-w-[136px]" title="tab1">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab1</span>
        <!--v-if-->
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer max-w-[136px]" title="tab2">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>Content tab1
  <!--v-if-->
</div>"
`;

exports[`FzTabs > Snapshots > should match snapshot - with badgeContent 1`] = `
"<div data-v-97c498eb="" class="flex flex-col">
  <div data-v-97c498eb="" class="flex flex-row">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto w-full sm:w-auto flex-row"><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 bg-white text-blue-500 cursor-pointer max-w-[136px]" title="tab1" badgecontent="1">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab1</span>
        <div class="flex items-center justify-center font-medium text-xs px-8 size-20 bg-blue-500 text-core-white rounded-full !px-0">1</div>
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer max-w-[136px]" title="tab2">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>Content tab1
  <!--v-if-->
</div>"
`;

exports[`FzTabs > Snapshots > should match snapshot - with icon 1`] = `
"<div data-v-97c498eb="" class="flex flex-col">
  <div data-v-97c498eb="" class="flex flex-row">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto w-full sm:w-auto flex-row"><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 bg-white text-blue-500 cursor-pointer max-w-[136px]" title="tab1" icon="bell">
        <div class="flex items-center justify-center w-[15px] h-[15px]"><svg class="svg-inline--fa fa-bell fa-sm h-[12px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="bell" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
            <path class="" fill="currentColor" d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 25.4c0 45.4-15.5 89.5-43.8 124.9L5.3 377c-5.8 7.2-6.9 17.1-2.9 25.4S14.8 416 24 416l400 0c9.2 0 17.6-5.3 21.6-13.6s2.9-18.2-2.9-25.4l-14.9-18.6C399.5 322.9 384 278.8 384 233.4l0-25.4c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm0 96c61.9 0 112 50.1 112 112l0 25.4c0 47.9 13.9 94.6 39.7 134.6L72.3 368C98.1 328 112 281.3 112 233.4l0-25.4c0-61.9 50.1-112 112-112zm64 352l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z"></path>
          </svg></div><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab1</span>
        <!--v-if-->
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center  rounded-md text-sm h-40 gap-6 py-8 px-12 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer max-w-[136px]" title="tab2">
        <!--v-if--><span class="text-ellipsis flex-1 whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>Content tab1
  <!--v-if-->
</div>"
`;

exports[`FzTabs > change tab 1`] = `
"<div data-v-97c498eb="" class="flex flex-col">
  <div data-v-97c498eb="" class="flex flex-row">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto flex-row"><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-sm h-40 gap-6 py-8 px-12 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer" title="tab1">
        <!--v-if--><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab1</span>
        <!--v-if-->
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-sm h-40 gap-6 py-8 px-12 bg-white text-blue-500 cursor-pointer" title="tab2">
        <!--v-if--><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->Content tab2
</div>"
`;

exports[`FzTabs > renders with badgeContent on tab1 1`] = `
"<div data-v-97c498eb="" class="flex flex-col">
  <div data-v-97c498eb="" class="flex flex-row">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto flex-row"><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-sm h-40 gap-6 py-8 px-12 bg-white text-blue-500 cursor-pointer" title="tab1" badgecontent="1">
        <!--v-if--><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab1</span>
        <div class="flex items-center justify-center font-medium text-xs px-8 size-20 bg-blue-500 text-core-white rounded-full !px-0">1</div>
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-sm h-40 gap-6 py-8 px-12 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer" title="tab2">
        <!--v-if--><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>Content tab1
  <!--v-if-->
</div>"
`;

exports[`FzTabs > renders with base case 1`] = `
"<div data-v-97c498eb="" class="flex flex-col">
  <div data-v-97c498eb="" class="flex flex-row">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto flex-row"><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-sm h-40 gap-6 py-8 px-12 bg-white text-blue-500 cursor-pointer" title="tab1">
        <!--v-if--><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab1</span>
        <!--v-if-->
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-sm h-40 gap-6 py-8 px-12 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer" title="tab2">
        <!--v-if--><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>Content tab1
  <!--v-if-->
</div>"
`;

exports[`FzTabs > renders with icon on tab1 1`] = `
"<div data-v-97c498eb="" class="flex flex-col">
  <div data-v-97c498eb="" class="flex flex-row">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto flex-row"><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-sm h-40 gap-6 py-8 px-12 bg-white text-blue-500 cursor-pointer" title="tab1" icon="bell">
        <div class="flex items-center justify-center w-[15px] h-[15px]"><svg class="svg-inline--fa fa-bell fa-sm h-[12px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="bell" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
            <path class="" fill="currentColor" d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 25.4c0 45.4-15.5 89.5-43.8 124.9L5.3 377c-5.8 7.2-6.9 17.1-2.9 25.4S14.8 416 24 416l400 0c9.2 0 17.6-5.3 21.6-13.6s2.9-18.2-2.9-25.4l-14.9-18.6C399.5 322.9 384 278.8 384 233.4l0-25.4c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm0 96c61.9 0 112 50.1 112 112l0 25.4c0 47.9 13.9 94.6 39.7 134.6L72.3 368C98.1 328 112 281.3 112 233.4l0-25.4c0-61.9 50.1-112 112-112zm64 352l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z"></path>
          </svg></div><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab1</span>
        <!--v-if-->
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-sm h-40 gap-6 py-8 px-12 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer" title="tab2">
        <!--v-if--><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>Content tab1
  <!--v-if-->
</div>"
`;

exports[`FzTabs > renders with md size 1`] = `
"<div data-v-97c498eb="" class="flex flex-col">
  <div data-v-97c498eb="" class="flex flex-row">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto flex-row"><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-md h-40 gap-8 py-12 px-14 bg-white text-blue-500 cursor-pointer" title="tab1">
        <!--v-if--><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab1</span>
        <!--v-if-->
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-md h-40 gap-8 py-12 px-14 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer" title="tab2">
        <!--v-if--><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>Content tab1
  <!--v-if-->
</div>"
`;

exports[`FzTabs > renders with vertical direction 1`] = `
"<div data-v-97c498eb="" class="flex flex-row">
  <div data-v-97c498eb="" class="flex flex-col">
    <div data-v-97c498eb="" class="tab-container flex rounded-lg gap-8 p-2 bg-grey-100 w-fit max-w-full overflow-x-auto flex-col"><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-sm h-40 gap-6 py-8 px-12 bg-white text-blue-500 cursor-pointer" title="tab1">
        <!--v-if--><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab1</span>
        <!--v-if-->
      </button><button data-v-97c498eb="" class="w-auto flex font-medium items-center max-w-[136px] rounded-md text-sm h-40 gap-6 py-8 px-12 text-grey-500 bg-grey-100 hover:bg-background-alice-blue active:bg-white active:text-blue-500 cursor-pointer" title="tab2">
        <!--v-if--><span class="text-ellipsis whitespace-nowrap overflow-hidden">tab2</span>
        <!--v-if-->
      </button></div>
  </div>Content tab1
  <!--v-if-->
</div>"
`;
